# WorkAI

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING_AI.md  CUTOVER.md  DB_CONTRACT.md  DECISIONS.md  DOCS_INDEX.md  DOMAIN_GLOSSARY.md  PROJECT_BRIEF.md  README.md  ROADMAP.md  RUNBOOK.md  TASK_BOARD.md  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml
WorkAI/: __init__.py
WorkAI/api/: __init__.py  dependencies.py  errors.py  main.py  queries.py  schemas.py
WorkAI/assess/: __init__.py  aggregation.py  bayesian_norms.py  ghost_time.py  models.py  queries.py  runner.py  scoring.py
WorkAI/audit/: __init__.py  agents.py  crew.py  models.py  queries.py  schemas.py  tasks.py  tools.py
WorkAI/common/: __init__.py  errors.py  logging.py
WorkAI/config/: __init__.py  settings.py
WorkAI/db/: __init__.py  pool.py  queries.py  schema.py
WorkAI/ingest/: __init__.py  a1.py  models.py  runner.py  sheets_client.py
WorkAI/knowledge_base/: __init__.py  chunking.py  extractors.py  indexer.py  lookup.py  models.py  queries.py
WorkAI/normalize/: __init__.py  categorizer.py  employee_map.py  models.py  queries.py  runner.py  text_norm.py  time_parse.py
WorkAI/notifier/: __init__.py  models.py  queries.py  rules.py  telegram_bot.py
WorkAI/ops/: __init__.py  cost_rollup.py  cutover_readiness.py  healthcheck.py  models.py  parallel_diff.py  queries.py  stale_sweeper.py  verify_units.py
WorkAI/parse/: __init__.py  date_parse.py  layout.py  models.py  parser.py  queries.py  runner.py
deploy/nginx/: workai.conf
deploy/secrets.example/: api.env.example  db.env.example  db.test.env.example  google_sheets.env.example  google_sheets.test.env.example  google_sheets_sources.json.example  openai.env.example  workai.env.example
docs/: DR_PLAN.md  FINAL_PROJECT_DOSSIER.md  README.md
migrations/: env.py
scripts/: bootstrap_dev.sh  check_ai_dependency_compat.py  run_audit.py  run_audit_prod.sh  run_cost_rollup.py  run_cost_rollup_daily.py  run_cutover_readiness.py  run_healthcheck.py  run_index_knowledge.py  run_integration_checks.sh  run_notifier_smoke.py  run_parallel_diff.py  run_phase12_benchmarks.py  run_phase12_hardening_checks.sh  run_server_hardening.sh  run_stale_sweeper.py  run_timer_chain_check.py  run_verify_units.py  setup_nginx_reverse_proxy.sh  workai_api.py  workai_assess.py  workai_assess_daily.py  workai_explain_assess.py  workai_ingest.py  workai_migrate.py  workai_normalize.py  workai_parse.py
tests/: conftest.py
(+122 files in other folders)
