[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workai"
version = "2.0.0-dev"
description = "WorkAI — Employee quality & audit system"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
    { name = "kuzakovvd" }
]
dependencies = [
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "structlog>=24.4,<25",
    "alembic>=1.18,<2",
    "psycopg[binary,pool]>=3.3,<4",
    "google-api-python-client>=2.160,<3",
    "google-auth>=2.30,<3",
    "google-auth-httplib2>=0.2,<1",
    "crewai==1.9.3",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5,<6",
]

[tool.setuptools.packages.find]
include = ["WorkAI*"]
exclude = ["tests*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["WorkAI", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
    "N999",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
"__init__.py" = ["F401"]
"WorkAI/api/**/*.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
packages = ["WorkAI"]

[[tool.mypy.overrides]]
module = "WorkAI.api.*"
disallow_untyped_decorators = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "integration: tests requiring real PostgreSQL integration environment",
    "integration_online: tests requiring external online dependencies (e.g. Google API)",
]

[tool.coverage.run]
source = ["WorkAI"]
branch = true

[tool.coverage.report]
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
